Bug 117797 - [CSS Regions] fast/regions/seamless-iframe-flowed-into-regions.html asserts
Summary: [CSS Regions] fast/regions/seamless-iframe-flowed-into-regions.html asserts
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andrei Bucur
URL:
Keywords:
Depends on:
Blocks: 57312
  Show dependency treegraph
 
Reported: 2013-06-19 06:28 PDT by Andrei Bucur
Modified: 2013-06-26 09:06 PDT (History)
5 users (show)

See Also:


Attachments
Patch (4.23 KB, patch)
2013-06-21 02:37 PDT, Andrei Bucur
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andrei Bucur 2013-06-19 06:28:03 PDT
When enabling seamless iframes fast/regions/seamless-iframe-flowed-into-regions.html fails. This happens because the RenderFlowThread objects are shared between the root RenderView and the iframe RenderView but they have different layout state objects.
Comment 1 Andrei Bucur 2013-06-21 02:37:56 PDT
Created attachment 205161 [details]
Patch
Comment 2 Antti Koivisto 2013-06-26 08:51:28 PDT
r=me
Comment 3 WebKit Commit Bot 2013-06-26 09:05:58 PDT
Comment on attachment 205161 [details]
Patch

Clearing flags on attachment: 205161

Committed r151992: <http://trac.webkit.org/changeset/151992>
Comment 4 WebKit Commit Bot 2013-06-26 09:06:01 PDT
All reviewed patches have been landed.  Closing bug.